--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,21 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-*{
-    margin: 0;
+* {
+  margin: 0;
 }
+/*@theme inline {*/
+/*    --color-darkGreen: #1f8f6a;*/
+/*    --color-lightGreen: #75aa97;*/
+/*    --color-gold:#e6c466;*/
+/*}*/
 
-@theme inline {
-    --color-darkGreen: #1f8f6a;
-    --color-lightGreen: #75aa97;
-    --color-gold:#e6c466;
+
+.icon{
+  background: rgba(255,255,255,0.2);
+  -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
+  border: 1px solid rgba(255,255,255,0.1);
+  border-radius: 100%;
 }
