--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,10 @@
   border: 1px solid rgba(255,255,255,0.1);
   border-radius: 100%;
 }
+
+.lightGreen{
+  background: rgba(31,143,106,0.45);
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  border: 1px solid rgba(31,143,106,0.225);
+}
