--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,12 @@
   backdrop-filter: blur(3px);
   border: 1px solid rgba(31,143,106,0.225);
 }
+.darkGreenGlass{
+  background: rgba(31,143,106,0.5);
+  -webkit-backdrop-filter: blur(1px);
+  backdrop-filter: blur(1px);
+  border: 1px solid rgba(31,143,106,0.25);
+}
 
 
 .embla {
