--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,12 @@
   backdrop-filter: blur(1px);
   border: 1px solid rgba(31,143,106,0.25);
 }
+.whiteGlass{
+  background: rgba(255,255,255,0.65);
+  -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
+  border: 1px solid rgba(255,255,255,0.325);
+}
 
 
 .embla {
